# neo4j-code-graph

./: .codecov.yml  .env.example  .gitignore  .gitleaks.toml  .local-pytest-output.txt  .pre-commit-config.yaml  404.html  AGENTS.md  CODING_STYLE_GUIDE.md  CONTRIBUTING.md  CRITICAL_BUGS_FOUND.md  CYPHER_QUERY_VALIDATION.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  analyze.py  antora-playbook.yml  centrality_analysis.py  cleanup_graph.py  code_to_graph.py  common.py  coverage-live.xml  create_method_similarity.py  cve_analysis.py  cve_cache_manager.py  cve_queries.cypher  cypher_templates_for_bloom.cypher  dev-requirements.txt  git_history.py  git_history_to_graph.py  index.html  junit.xml  optimized_cve_queries.cypher  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  risk_report.json  (+4 more)
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  coverage_debug.yml  docs.yml  tests.yml
_/: antora.yml
_/styles/: cypher.css
bloom/: CodeGraph.json
config/: dev-requirements.txt  requirements.txt
docs/: COOKBOOK.md  NVD_API_SETUP.md  PRECISE_CVE_MATCHING.md  antora.yml  preview.yml  reachability.md
docs/seed/: neo4j_seed.cypher
docs/ui/: antora.yml
examples/: business_queries.md  cve_demo_queries.py  queries.yml
neo4j-code-graph/0.1/: architecture.html  configuration.html  development.html  getting-started.html  index.html  project-structure.html  requirements.html
neo4j-code-graph/latest/: architecture.html  configuration.html  development.html  getting-started.html  graph-model-llm.html  graph-model.html  guide.html  index.html  mcp.html  project-structure.html  references.html  requirements.html
scripts/: README.md  analyze.py  backfill_dependency_versions.py  centrality_analysis.py  check_neo4j_state.py  check_progress.py  cleanup_graph.py  code_to_graph.py  comprehensive_cleanup.py  create_database.py  create_method_similarity.py  cve_analysis.py  demo_precise_cve_matching.py  dev_setup.py  fix_code_quality.py  force_backfill_gav.py  generate_graph_model_properties.py  generate_prefect_dag.py  git_history_to_graph.py  pre_push_live.sh  prepare_ci_test_data.py  resume_processing.py  run_docs_queries.py  run_pipeline.py  run_pipeline.sh  safe_commit.sh  schema_management.py  test_with_neo4j.sh  update_dependency_versions.py  validate_cypher.py  validate_cypher_snippets.py  validate_environment.py  wait_for_neo4j.py
scripts_new/: git_history_to_graph.py  schema_management.py
src/: constants.py
src/analysis/: advanced_analysis.py  calls.py  centrality.py  cli.py  code_analysis.py  combined_analysis.py  delta.py  dependency_extraction.py  embeddings.py  enhanced_dependency_extraction.py  extractor.py  gds_helpers.py  git_analysis.py  git_bulk_writer.py  git_dataframes.py  git_reader.py  intent.py  io.py  java_treesitter.py  parser.py  payload_validation.py  similarity.py  temporal_analysis.py  types.py
src/data/: cypher_builders.py  graph_writer.py  incremental.py  provenance.py  schema_management.py
src/mcp_server/: __init__.py  contracts.py  server.py
src/pipeline/: cli.py  manager.py  prefect_compat.py  prefect_flow.py  preflight.py  progress.py  resume.py
src/security/: core.py  cve_analysis.py  cve_cache_manager.py  cve_cache_store.py  gav_cve_matcher.py  ghsa_client.py  graph_writer.py  linking.py  nvd_client.py  reachability.py  report.py  risk_report.py  types.py
src/utils/: batching.py  cleanup.py  common.py  cypher_validation.py  neo4j_utils.py  progress.py
tests/: conftest.py  test_calls_extraction_multifile.py  test_calls_extraction_real.py  test_centrality_analysis.py  test_centrality_sanity.py  test_cleanup_complete.py  test_cli_scripts.py  test_cli_smoke_imports.py  test_code_analysis_batching.py  test_code_to_graph.py  test_common_utils_comprehensive.py  test_connection.py  test_constants.py  test_create_method_similarity.py  test_cve_analysis.py  test_cve_analysis_comprehensive.py  test_cve_cache_manager_async.py  test_cve_cache_manager_cache.py  test_cypher_explain_smoke.py  test_dependency_extraction.py  test_dependency_extraction_properties.py  test_dependency_extraction_real.py  test_dependency_parsing_enhanced.py  test_end_to_end_imports_and_calls_write.py  test_enhanced_features.py  test_ensure_port.py  test_examples.py  test_external_calls_extraction.py  test_external_calls_writer.py  test_gav_cve_matcher_comprehensive.py  test_gds_pagerank_smoke.py  test_gds_smoke.py  test_git_analysis_minirepo.py  test_git_history.py  test_gradle_extraction.py  test_gradle_nested_vars.py  test_imports_and_relationships_real.py  test_imports_edge_cases.py  test_java_grammar_surface.py  test_java_parsing_real.py  (+18 more)
tests/analysis/: test_calls_unit.py  test_centrality_more_unit.py  test_centrality_params_unit.py  test_code_analysis_dirs_imports_unit.py  test_code_analysis_extract_integration.py  test_create_methods_rels_unit.py  test_delta_unit.py  test_dependency_extraction_unit.py  test_dependency_extractor_edge_cases_unit.py  test_gds_helpers_unit.py  test_git_analysis_end_to_end.py  test_io_unit.py  test_method_call_extractor_unit.py  test_parser_calls_edges_unit.py  test_parser_unit.py  test_payload_validation_unit.py  test_similarity_args_unit.py  test_similarity_extra_unit.py  test_similarity_kernels_unit.py  test_small_helpers_unit.py  test_temporal_analysis_unit.py
tests/data/: test_provenance_live.py  test_provenance_unit.py  test_schema_ensure_unit.py  test_schema_failfast_unit.py  test_schema_management_unit.py
tests/e2e/: test_pipeline_smoke_e2e.py  test_pipeline_with_fixtures_e2e.py
tests/fixtures/: ci_test_fixtures.py
tests/integration/: incremental_common.py  test_call_graph_b2_live.py  test_calls_ambiguous_fallback_live.py  test_calls_crossfile_instance_live.py  test_calls_crossfile_live.py  test_centrality_live.py  test_cleanup_complete_live.py  test_cleanup_live.py  test_cleanup_similarities_live.py  test_code_analysis_live.py  test_code_to_graph_live_light.py  test_cve_linking_live.py  test_docs_live.py  test_git_history_idempotence_live.py  (+23 more)
(+95 files in other folders)
